--- a/index.html
+++ b/index.html
@@ -21,7 +21,56 @@
     </header>
 
     <main>
-       
+        <section id="position">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box">
+                            <div class="textbox">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti pariatur quibusdam
+                                    laudantium officia, assumenda dolor, blanditiis voluptatum optio ex fugiat corporis
+                                    debitis cupiditate minus maiores sunt eveniet tempora, dolorum ut? Lorem ipsum dolor
+                                    sit
+                                    amet, consectetur adipisicing elit. Blanditiis cum adipisci odio quod aut eaque
+                                    obcaecati earum? Libero ex deleniti qui rem rerum, dignissimos incidunt nulla itaque
+                                    labore eligendi. Autem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Blanditiis totam eos, molestias itaque mollitia porro omnis ipsum obcaecati
+                                    sapiente,
+                                    ullam accusantium, in error perspiciatis quia ab natus incidunt tempora deleniti.
+                                </p>
+                            </div>
+                            <div class="minibox run">
+                                1
+                            </div>
+                            <div class="minibox">
+                                2
+                            </div>
+                            <div class="minibox">
+                                3
+                            </div>
+                            <div class="minibox">
+                                4
+                            </div>
+                            <div class="minibox">
+                                5
+                            </div>
+                            <div class="minibox">
+                                6
+                            </div>
+                            <div class="minibox">
+                                7
+                            </div>
+                            <div class="minibox">
+                                8
+                            </div>
+                            <div class="minibox">
+                                9
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
