--- a/index.html
+++ b/index.html
@@ -21,50 +21,113 @@
     </header>
 
     <main>
-        <section id="position">
+        <section id="exercise">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-around">
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-around">
+                        <div class="karo">
+                            <div class="buton">
+                                <h1>Demo</h1>
+                            </div>
+                        </div>
+                        <div class="karo">
+                            <div class="buton">
+                                <h1>Demo</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-around">
+                        <div class="circle">
+                            <div class="evo">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="circle">
+                            <div class="evo">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="circle">
+                            <div class="evo">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="circle">
+                            <div class="evo">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <section id="bigbox">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box">
-                            <div class="textbox">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti pariatur quibusdam
-                                    laudantium officia, assumenda dolor, blanditiis voluptatum optio ex fugiat corporis
-                                    debitis cupiditate minus maiores sunt eveniet tempora, dolorum ut? Lorem ipsum dolor
-                                    sit
-                                    amet, consectetur adipisicing elit. Blanditiis cum adipisci odio quod aut eaque
-                                    obcaecati earum? Libero ex deleniti qui rem rerum, dignissimos incidunt nulla itaque
-                                    labore eligendi. Autem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Blanditiis totam eos, molestias itaque mollitia porro omnis ipsum obcaecati
-                                    sapiente,
-                                    ullam accusantium, in error perspiciatis quia ab natus incidunt tempora deleniti.
-                                </p>
+                            <div class="bluebox">
+                                <h1>TEXT1</h1>
                             </div>
-                            <div class="minibox run">
-                                1
+                            <div class="bluebox">
+                                <h1>TEXT2</h1>
                             </div>
-                            <div class="minibox">
-                                2
+                            <div class="bluebox">
+                                <h1>TEXT3</h1>
                             </div>
-                            <div class="minibox">
-                                3
+                            <div class="bluebox">
+                                <h1>TEXT4</h1>
                             </div>
-                            <div class="minibox">
-                                4
+                            <div class="bluebox run">
+                                <h1>TEXT5</h1>
                             </div>
-                            <div class="minibox">
-                                5
+                            <div class="bluebox">
+                                <h1>TEXT6</h1>
                             </div>
-                            <div class="minibox">
-                                6
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box">
+                            <div class="greenbox">
+                                <h1>TEXT1</h1>
                             </div>
-                            <div class="minibox">
-                                7
+                            <div class="greenbox side">
+                                <h1>TEXT2</h1>
                             </div>
-                            <div class="minibox">
-                                8
+                            <div class="greenbox">
+                                <h1>TEXT3</h1>
                             </div>
-                            <div class="minibox">
-                                9
+                            <div class="greenbox">
+                                <h1>TEXT4</h1>
+                            </div>
+                            <div class="greenbox">
+                                <h1>TEXT5</h1>
+                            </div>
+                            <div class="greenbox">
+                                <h1>TEXT6</h1>
                             </div>
                         </div>
                     </div>
